<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
        <android.support.v4.view.ViewPager
            android:id="@+id/tab_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/part_line"
        />
    <RadioGroup
        android:layout_alignParentBottom="true"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="2dp"
        android:paddingTop="3dp"
        android:id="@+id/rg_tabs"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/feature"
            android:drawableTop="@drawable/rb_jx"
            android:text="@string/tab_feature"
            style="@style/tab_radio"/>
        <RadioButton
            android:id="@+id/message"
            android:text="@string/tab_message"
            android:drawableTop="@drawable/rb_dt"
            style="@style/tab_radio"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_icon_compose"/>
        <RadioButton
            android:id="@+id/search"
            android:drawableTop="@drawable/rb_fx"
            android:text="@string/tab_search"
            style="@style/tab_radio"/>
        <RadioButton
            android:id="@+id/account"
            android:drawableTop="@drawable/rb_wd"
            android:text="@string/tab_account"
            style="@style/tab_radio"/>
    </RadioGroup>
</LinearLayout>
