<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:src="@mipmap/placeholder_no_cover"
        android:id="@+id/placeholder_img"
        android:layout_width="60dp"
        android:layout_height="60dp" />
    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/placeholder_img"
        android:id="@+id/my_account_info"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/my_account_name"
            android:text="@string/account_name"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black_content"
            />
        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/share_count"
                android:layout_marginRight="3dp"
                android:text="0"
                android:textColor="@color/gray_content"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/account_share"
                android:layout_marginRight="7dp"
                android:textColor="@color/gray_content"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/readme_count"
                android:text="0"
                android:layout_marginRight="3dp"
                android:textColor="@color/gray_content"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/account_reader"
                android:textColor="@color/gray_content"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/show"
        android:text="@string/show_to_show"
        android:layout_marginRight="15dp"
        android:textColor="@color/btn_show_color"
        android:background="@drawable/btn_show_to_show"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
         />
</RelativeLayout>