<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/message_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--标题-->
    <TextView
        android:text="@string/account_title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/title"
        android:textSize="@dimen/title"
        android:background="@color/main_theme"
        />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--滑动区域-->
        <ScrollView
            android:id="@+id/scrollView"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <!--头像部分布局-->
                <RelativeLayout
                    android:id="@+id/oneself_info"
                    android:background="@color/main_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    >
                    <demo.you.com.developerdemo.customview.CircleImageView
                        android:id="@+id/avatar"
                        imagecontrol:border_inside_color="@color/main_theme"
                        imagecontrol:border_thickness="2dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@mipmap/default_avatar"
                        android:layout_marginRight="15dp"
                        />
                    <TextView
                        android:id="@+id/please_input_nickname"
                        android:layout_toRightOf="@id/avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/title"
                        android:text="@string/input_nickname"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:id="@+id/complete_info"
                        android:layout_toRightOf="@id/avatar"
                        android:layout_below="@id/please_input_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/complete_oneself_info"
                        android:text="@string/complete_info"
                        android:layout_marginTop="10dp"
                        />
                    <ImageView
                        android:layout_centerVertical="true"
                        android:id="@+id/indicator"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/indicator_gray"
                        android:layout_width="18dp"
                        android:layout_height="18dp" />
                </RelativeLayout>
                <View
                    android:background="@color/under_oneself_line"
                    android:layout_width="match_parent"
                    android:layout_height="0.01dp"/>

                <!--分享一栏-->
                <LinearLayout
                    android:paddingTop="5dp"
                    android:background="@color/main_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/account_share"
                        style="@style/account_share_bar"
                        android:textSize="15sp" />
                    <TextView
                        android:text="@string/account_focu"
                        style="@style/account_share_bar"
                        android:textSize="15sp" />
                    <TextView
                        android:text="@string/account_friend"
                        style="@style/account_share_bar"
                        android:textSize="15sp" />
                </LinearLayout>
                <LinearLayout
                    android:paddingBottom="5dp"
                    android:background="@color/main_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="12sp"
                        android:text="0"
                        style="@style/account_share_bar"/>
                    <TextView
                        android:textSize="12sp"
                        android:text="0"
                        style="@style/account_share_bar" />
                    <TextView
                        android:textSize="12sp"
                        android:text="0"
                        style="@style/account_share_bar" />
                </LinearLayout>

                <!--申请新独家号-->
                <View
                    android:layout_marginTop="8dp"
                    android:background="@color/part_line"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"/>
                <ListView
                    android:id="@+id/apply_new_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/part_line"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"/>

                <!--显示独家号主要信息-->
                <demo.you.com.developerdemo.customview.ListViewForScrollView
                    android:id="@+id/my_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <!--各种我的选项-->
                <demo.you.com.developerdemo.customview.ListViewForScrollView
                    android:id="@+id/about_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/press_item"
                    android:dividerHeight="0dp"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>