<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/my_search_fragment"
    android:background="@color/message_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/search_title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/title"
        android:textSize="@dimen/title"
        android:background="@color/main_theme"
        />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/search_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:id="@+id/search_scrollView"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--可滑动区域-->
            <LinearLayout
                android:background="@color/search_bar"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--搜索栏-->
                <LinearLayout
                    android:padding="10dp"
                    android:background="@color/search_bar"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:padding="8dp"
                        android:gravity="center"
                        android:background="@drawable/search_bar_bg"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_marginRight="8dp"
                            android:src="@mipmap/ic_search_grey_12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:text="@string/search_hint"
                            android:textColor="@color/search_hint"
                            android:textSize="12sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/search_part_line"
                    />
                <!--活跃团队号标题栏-->
                <RelativeLayout
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:background="@color/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/hot_team_title"
                        android:text="@string/hot_team"
                        android:textColor="@color/search_title_name"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:id="@+id/help_img"
                        android:layout_marginLeft="8dp"
                        android:layout_toRightOf="@id/hot_team_title"
                        android:src="@mipmap/icon_help_blue_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/select_hot_teams"
                        android:text="@string/select_hot"
                        android:textColor="@color/main_theme"
                        android:layout_alignParentRight="true"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <!--活跃团队号列表-->
                <demo.you.com.developerdemo.customview.ListViewForScrollView
                    android:background="@color/title"
                    android:id="@+id/hot_team_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <!--活跃独家号标题栏-->
                <RelativeLayout
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:background="@color/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/active_account_title"
                        android:text="@string/active_account"
                        android:textColor="@color/search_title_name"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:id="@+id/help_img_account"
                        android:layout_marginLeft="8dp"
                        android:layout_toRightOf="@id/active_account_title"
                        android:src="@mipmap/icon_help_blue_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/select_active_account"
                        android:text="@string/select_last"
                        android:textColor="@color/main_theme"
                        android:layout_alignParentRight="true"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <!--活跃独家号列表-->
                <demo.you.com.developerdemo.customview.ListViewForScrollView
                    android:id="@+id/active_account_list"
                    android:background="@color/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <!--热门独家号标题栏-->
                <RelativeLayout
                    android:padding="12dp"
                    android:gravity="center_vertical"
                    android:background="@color/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/hot_account_title"
                        android:text="@string/active_account"
                        android:textColor="@color/search_title_name"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <!--热门独家号列表-->
                <demo.you.com.developerdemo.customview.ListViewForScrollView
                    android:id="@+id/hot_account_list"
                    android:background="@color/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>